// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Searchbox 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox is-active"
          >
            <input
              autocomplete="off"
              name="keywords"
              placeholder="请输入"
              type="text"
              value="searchkey"
            />
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox-searchBtn"
            >
              <icon-mock
                class="icon icon-search"
                icon="search"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Searchbox with clearable 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox is-active"
  >
    <input
      autocomplete="off"
      name="keywords"
      placeholder="请输入"
      type="text"
      value="tmpvalue"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox-clearable"
    >
      <icon-mock
        class="icon icon-input-clear"
        icon="input-clear"
      />
    </div>
    <a
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox-searchBtn"
    >
      <icon-mock
        class="icon icon-search"
        icon="search"
      />
    </a>
  </div>
</div>
`;

exports[`Renderer:Searchbox with enhance 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox __PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox--enhance is-active"
          >
            <input
              autocomplete="off"
              name="keywords"
              placeholder="请输入"
              type="text"
              value=""
            />
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox-searchBtn"
            >
              <icon-mock
                class="icon icon-search"
                icon="search"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Searchbox with mini 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox"
  >
    <input
      autocomplete="off"
      name="keywords"
      placeholder="请输入"
      type="text"
      value=""
    />
    <a
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox-activeBtn"
    >
      <icon-mock
        class="icon icon-search"
        icon="search"
      />
    </a>
  </div>
</div>
`;

exports[`Renderer:Searchbox with mini 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox is-focused is-active"
  >
    <input
      autocomplete="off"
      name="keywords"
      placeholder="请输入"
      type="text"
      value="what?"
    />
    <a
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__SearchBox-cancelBtn"
    >
      <icon-mock
        class="icon icon-close"
        icon="close"
      />
    </a>
  </div>
</div>
`;
